<resources>
    <string name="app_name">Traveling</string>

    <string name="create_account">Create an account</string>
    <string name="signup_instruction">Enter your email to sign up for this app</string>
    <string name="emailEnter">Please enter your email</string>
    <string name="emailValid">Please enter a valid email</string>
    <string name="emailVerify">Please verify your email</string>
    <string name="emailError">Error checking email. Try again</string>
    <string name="email_hint">email@domain.com</string>

    <string name="continue_btn">Continue</string>
    <string name="continue_guest">Continue as Guest</string>

    <string name="continue_google">Continue with Google</string>
    <string name="continue_apple">Continue with Apple</string>

    <string name="or">or</string>

    <string name="terms_text">
        By clicking continue, you agree to our Terms of
        Service and Privacy Policy.
    </string>

    <string name="welcome_back">Welcome back!</string>
    <string name="enter_password">Please enter your password</string>

    <string name="password_hint">Password</string>
    <string name="create_pswd">Create a password</string>
    <string name="confirm_password_hint">Please confirm your password</string>
    <string name="choose_password">Choose a strong password for your account</string>
    <string name="pwd6carMin">Password must be at least 6 characters</string>
    <string name="password_mismatch">Password Mismath</string>

    <string name="signInFailG"> Failed to sign in as guest</string>
    <string name="auth_failed"> Authorization Failed</string>
    <string name="profile_create_failed">Failed to create profile</string>
    <string name="load_profile_failed">Failed to load profile</string>
    <string name="anonymous">Anonymous</string>
    <string name="back">Back</string>

    <string name="search_hint">Search locations, themes, or authors...</string>
    <string name="nature">NATURE</string>
    <string name="city">CITY</string>
    <string name="museum">MUSEUM</string>
    <string name="shop">SHOPS</string>
    <string name="around_me">AROUND ME</string>

    <string name="myProfile">My Profile</string>

    <string name="userN">Username</string>
    <string name="userNH"> Enter a username</string>
    <string name="saveChanges"> Save Changes</string>
    <string name="signout"> Sign Out </string>
    <string name="saveFail">Failed to update profile.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join">Join</string>
    <string name="title">Title</string>
    <string name="add_comment"> Add comment here ...</string>
    <string name="groupN">Group name</string>
    <!--<string name=""></string>-->
    <!--            <string name=""></string>                 -->


    <!-- ============================= POST STRINGS ===================================-->
    <string name="post"> Post </string>
    <string name="upload_picture">Upload Picture</string>
    <string name="description"> Description </string>
    <string name="tag"> Tags </string>
    <string name="add_tag"> + Add Tag</string>
    <string name="address"> Address </string>
    <string name="group"> Group </string>
    <string name="public_label"> Public </string>
    <string name="private_label"> Private </string>

    <string name="login_required">Please log in to post</string>
    <string name="select_image">Please select an image</string>
    <string name="upload_failed">Upload failed</string>
    <string name="post_success">Posted!</string>
    <string name="post_failed">Post failed</string>

    <string name="sign_in_like">Sign in to like posts</string>
    <string name="no_address_available">No address available</string>
    <string name="open_with">Open with…</string>
    <string name="failed_load_post">Failed to load post: </string>

    <string name="no_posts_group">No posts in this group</string>
    <string name="no_posts_found">No posts found</string>
    <string name="failed_load_posts">Failed to load posts </string>
    <string name="no_posts_database">No posts found in database</string>

    <string name="ai_soon">AI tag suggestion coming soon</string>
    <string name="voice_soon">Voice input coming soon</string>
    <string name="private_post_group">Private posts require a group</string>
    <string name="url_cant">Could not get image URL:</string>
    <string name="title_required">Title is required</string>

    <!-- ============================= POST DETAIL STRINGS ===================================-->
    <string name="CAPTURED_BY">CAPTURED BY</string>
    <string name="LOCATION">LOCATION</string>
    <string name="DATE_TAKEN">DATE TAKEN</string>
    <string name="POSTED_ON">POSTED ON</string>
    <string name="REPORT">Report</string>
    <string name="Loc">Location</string>

    <!-- ============================= GROUP STRINGS =================================-->
    <string name="modify"> Modify </string>
    <!-- ============================= TRAVEL PATH ===================================-->
    <string name="activities">Activities</string>
    <string name="discovery">Discovery</string>
    <string name="culture">Culture</string>
    <string name="restaurants">Food Service</string>
    <string name="disabled">Disabled</string>
    <string name="start_location">Starting Location</string>
    <string name="budget_max">Budget Max</string>
    <string name="duration">Duration Max</string>
    <string name="effort">Effort</string>
    <string name="family">Family</string>
    <string name="dynamic">Dynamic</string>
    <string name="weather">Weather Sensitivity</string>
    <string name="heat">Heat</string>
    <string name="cold">Cold</string>
    <string name="rain">Rain</string>
    <string name="mandatory_visit">Mandatory Visit</string>
    <string name="add_visit">+ add visit</string>
    <string name="search">Search</string>
    <string name="result_list">Search Result</string>
    <string name="itinary">Itinary</string>
    <string name="my_mail">titouan.guibertlode@free.fr</string>
    <string name="connect_to_report">Connect to report the post</string>
    <string name="already_reported">You have already reported this post</string>
    <string name="post_reported">Post Reported</string>
    <string name="report_fail">Failed to report the post, please try again</string>
    <string name="members">%1$d members</string>

    <string name="search_failed">Search failed: %1$s</string>

    <!-- Comments -->
    <string name="comment_load_failed">Unable to load comments</string>
    <string name="comment_login_required">Please log in to comment</string>
    <string name="comment_send_failed">Failed to send comment</string>

    <!-- Group -->
    <string name="group_name_required">Group name is required</string>

    <string name="group_image_upload_failed">Image upload failed</string>
    <string name="group_create_failed">Failed to create group: %1$s</string>
    <string name="group_leave_failed">Failed to leave group: %1$s</string>
    <string name="group_validate_failed">Failed to validate group </string>
    <string name="group_sign_to_join">Sign in to join group</string>
    <string name="group_join_failed">Failed to join group: %1$s</string>
    <string name="joined_group">Joined %1$s!</string>
    <string name="already_in_group">You\'re already in %1$s</string>
    <string name="group_load_failed">Failed to load groups</string>
    <string name="join_failed">Failed to join: %1$s</string>
    <string name="left_group">Left group</string>
    <string name="find_group">Find your group...</string>
    <string name="my_groups">My Groups</string>
    <string name="leave_group">Leave</string>
    <string name="createGroup">Create New Group</string>
    <string name="groupName">enter a group name</string>
    <string name="create_group">+ Create Group</string>
    <string name="group_not_exist">Group does not exist</string>


    <!-- Location -->
    <string name="location_cant_try_again">Couldn\'t get your location. Try again.</string>
    <string name="location_perm_denied">Location permission denied, can\'t filter nearby posts.</string>

    <!-- notificaton -->
    <string name="notifications">Notifications</string>
    <string name="notification_sign_in">Sign in to receive notifications</string>
    <string name="notification_no">No new notification</string>
    <string name="error">Error</string>
    <string name="new_post_in_your_group">New post in your group</string>

    <string name="narrative">The Narrative</string>
    <string name="comments">Comments</string>


</resources>